--- a/Appunti di Sicurezza delle Reti.lyx
+++ b/Appunti di Sicurezza delle Reti.lyx
@@ -18915,6 +18915,13 @@ Con questa procedura, è possibile indurre gli utenti a usare in modo indefinito
 
 \begin_layout Subsection
 Protocollo Needham-Schroeder
+\begin_inset CommandInset label
+LatexCommand label
+name "subsec:Protocollo-Needham-Schroeder"
+
+\end_inset
+
+
 \end_layout
 
 \begin_layout Standard
@@ -20100,6 +20107,1443 @@ non-universalità (non tutti gli individui presentano qualità adeguata per
 spoofing
 \emph default
  (ingannare il sensore inducendo un falso positivo).
+\end_layout
+
+\begin_layout Section
+Kerberos
+\end_layout
+
+\begin_layout Standard
+Questo protocollo fornisce un servizio centralizzato per la distribuzione
+ delle chiavi e l'autenticazione indiretta in un ambiente distribuito e
+ non fidato (si dà per scontata la presenza di osservatori sul canale e
+ il tentativo di impersonare gli utenti legittimi).
+\end_layout
+
+\begin_layout Standard
+I suoi requisiti di implementazione sono:
+\end_layout
+
+\begin_layout Itemize
+gli utenti accedano ai servizi tramite la rete;
+\end_layout
+
+\begin_layout Itemize
+i server limitano l'accesso agli utenti autorizzati e autenticano le richieste
+ per i singoli servizi;
+\end_layout
+
+\begin_layout Itemize
+basato sul protocollo Needham-Schroeder (§
+\begin_inset space ~
+\end_inset
+
+
+\begin_inset CommandInset ref
+LatexCommand ref
+reference "subsec:Protocollo-Needham-Schroeder"
+plural "false"
+caps "false"
+noprefix "false"
+
+\end_inset
+
+), con l'impiego di un server fidato per l'autenticazione;
+\end_layout
+
+\begin_layout Itemize
+usa solo crittografia simmetrica (nessuna chiave pubblica);
+\end_layout
+
+\begin_layout Itemize
+richiede la sincronizzazione del tempo su tutte le macchine coinvolte.
+\end_layout
+
+\begin_layout Standard
+L'idea alla sua base è avere un server per autenticare gli utenti e un server
+ per autenticare l'accesso al servizio richiesto.
+\end_layout
+
+\begin_layout Subsection
+Richiesta di autenticazione
+\end_layout
+
+\begin_layout Standard
+Consideriamo un utente 
+\series bold
+C
+\series default
+ che vuole autenticarsi tramite il server di autenticazione 
+\series bold
+A
+\series default
+ (quest'ultimo deve essere stato inizializzato correttamente con le chiavi
+ simmetriche):
+\end_layout
+
+\begin_layout Enumerate
+
+\series bold
+C
+\series default
+ invia ad 
+\series bold
+A
+\series default
+ il proprio ID, la propria password e l'ID del server al quale vuole accedere
+ (
+\begin_inset Formula $\text{ID}_{C}\|p_{C}\|\text{ID}_{S}$
+\end_inset
+
+);
+\end_layout
+
+\begin_layout Enumerate
+
+\series bold
+A
+\series default
+ risponde a 
+\series bold
+C
+\series default
+ con un 
+\emph on
+ticket
+\emph default
+ 
+\begin_inset Formula $\bar{t}$
+\end_inset
+
+ (messaggio che solo il server di autenticazione può creare ed è valido
+ per uno specifico utente 
+\begin_inset Formula $\text{ID}_{C}$
+\end_inset
+
+ su uno specifico server 
+\begin_inset Formula $\text{ID}_{S}$
+\end_inset
+
+);
+\end_layout
+
+\begin_layout Enumerate
+
+\series bold
+C
+\series default
+ invia ad 
+\series bold
+S
+\series default
+ (server identificato da 
+\begin_inset Formula $\text{ID}_{S}$
+\end_inset
+
+) il ticket e il proprio nome (
+\begin_inset Formula $\text{ID}_{C}\|\bar{t}$
+\end_inset
+
+).
+\end_layout
+
+\begin_layout Standard
+Il primo problema di questa implementazione è rappresentato dall'invio della
+ password dell'utente in chiaro; inoltre con questa implementazione ogni
+ volta che si vuole richiedere il servizio è necessario usare un ticket
+ (sarebbe più comodo per l'utente avere a disposizione una sessione al cui
+ interno usare liberamente il servizio).
+\end_layout
+
+\begin_layout Subsection
+Ticket granting server
+\end_layout
+
+\begin_layout Standard
+Introduciamo i seguenti cambiamenti all'algoritmo mostrato nella precedente
+ sezione:
+\end_layout
+
+\begin_layout Itemize
+non trasmettiamo la password dell'utente in chiaro;
+\end_layout
+
+\begin_layout Itemize
+usiamo un ticket granting server (
+\series bold
+T
+\series default
+), che distribuisce a un utente autorizzato un ticket per ottenere un altro
+ servizio richiesto;
+\end_layout
+
+\begin_deeper
+\begin_layout Itemize
+ticket granting ticket (
+\begin_inset Formula $\bar{t}_{G}$
+\end_inset
+
+) permette di richiedere il ticket di un servizio;
+\end_layout
+
+\begin_layout Itemize
+ticket di servizio (
+\begin_inset Formula $\bar{t}_{S}$
+\end_inset
+
+) permette di richiedere uno specifico servizio.
+\end_layout
+
+\end_deeper
+\begin_layout Standard
+Implementiamo il protocollo con i nuovi elementi introdotti:
+\end_layout
+
+\begin_layout Enumerate
+l'utente 
+\series bold
+C
+\series default
+, che si vuole autenticare, chiede un ticket al server 
+\series bold
+A
+\series default
+, inviandogli 
+\begin_inset Formula $\text{ID}_{C}\|\text{ID}_{T}$
+\end_inset
+
+;
+\end_layout
+
+\begin_layout Enumerate
+il server di autenticazione 
+\series bold
+A
+\series default
+ risponde con un ticket 
+\begin_inset Formula $\bar{t}_{G}$
+\end_inset
+
+ cifrato con la chiave simmetrica condivisa con 
+\series bold
+C
+\series default
+ (
+\begin_inset Formula $E_{K_{C,A}}\left(\bar{t}_{G}\right)$
+\end_inset
+
+);
+\end_layout
+
+\begin_layout Enumerate
+
+\series bold
+C
+\series default
+ chiede a 
+\series bold
+T
+\series default
+ un ticket per usare un servizio sul server 
+\series bold
+S
+\series default
+, inviandogli 
+\begin_inset Formula $\text{ID}_{C}\|\text{ID}_{S}\|\bar{t}_{G}$
+\end_inset
+
+ (il ticket ricevuto da 
+\series bold
+T
+\series default
+ può essere estratto solo dal vero 
+\series bold
+C
+\series default
+, poiché è necessario decifrare usando la chiave simmetrica 
+\begin_inset Formula $K_{C,A}$
+\end_inset
+
+ condivisa tra utente e server di autenticazione);
+\end_layout
+
+\begin_layout Enumerate
+il server 
+\series bold
+T
+\series default
+ risponde con il ticket 
+\begin_inset Formula $\bar{t}_{S}$
+\end_inset
+
+ se ha ricevuto un 
+\begin_inset Formula $\bar{t}_{G}$
+\end_inset
+
+ coretto;
+\end_layout
+
+\begin_layout Enumerate
+l'utente 
+\series bold
+C
+\series default
+ si rivolge al server 
+\series bold
+S
+\series default
+ che fornisce il servizio desiderato, inviandogli il ticket e il proprio
+ nome (
+\begin_inset Formula $\text{ID}_{C}\|\bar{t}_{S}$
+\end_inset
+
+).
+\end_layout
+
+\begin_layout Standard
+Ogni volta che un utente inizia una nuova sessione di autenticazione, dovrà
+ ripetere i passi 1-2; ogni volta che l'utente vuole accedere a un servizio
+ differente, ripeterà i passi 3-4; per ogni sessione di servizio avviata
+ dall'utente, esso dovrà ripetere il passo 5.
+\end_layout
+
+\begin_layout Standard
+I due ticket sono costruiti come segue:
+\end_layout
+
+\begin_layout Itemize
+\begin_inset Formula $\bar{t}_{G}=E_{K_{T,A}}\left(\text{ID}_{C}\|\text{ID}_{A}\|\text{ID}_{T}\|t_{s1}\|\ell_{1}\right)$
+\end_inset
+
+;
+\end_layout
+
+\begin_layout Itemize
+\begin_inset Formula $\bar{t}_{S}=E_{K_{S,T}}\left(\text{ID}_{C}\|\text{ID}_{A}\|\text{ID}_{S}\|t_{s2}\|\ell_{2}\right)$
+\end_inset
+
+.
+\end_layout
+
+\begin_layout Standard
+Nella struttura dei ticket abbiamo 
+\begin_inset Formula $t_{si}$
+\end_inset
+
+ che rappresenta il timestamp 
+\begin_inset Formula $i$
+\end_inset
+
+-esimo (data di rilascio del ticket), e 
+\begin_inset Formula $\ell_{i}$
+\end_inset
+
+ che rappresenta il tempo di vita 
+\begin_inset Formula $i$
+\end_inset
+
+-esimo di un ticket.
+ Se i tempi di vita dei ticket sono troppo corti o troppo lunghi, l'utente
+ dovrà fornire spesso la password oppure ci si espone ad attacchi di replica:
+\end_layout
+
+\begin_layout Itemize
+il ticket 
+\begin_inset Formula $\bar{t}_{G}$
+\end_inset
+
+ può essere osservato sul canale e replicato per richiedere il ticket 
+\begin_inset Formula $\bar{t}_{S}$
+\end_inset
+
+, impersonando l'utente;
+\end_layout
+
+\begin_layout Itemize
+il ticket 
+\begin_inset Formula $\bar{t}_{S}$
+\end_inset
+
+ può essere osservato sul canale e replicato per richiedere un servizio,
+ impersonando l'utente;
+\end_layout
+
+\begin_layout Itemize
+basta usare l'indirizzo IP dell'utente 
+\series bold
+C
+\series default
+ per impersonarlo.
+\end_layout
+
+\begin_layout Standard
+Per evitare questo tipo di attacchi bisogna autenticare client con server
+ e vice versa.
+\end_layout
+
+\begin_layout Subsection
+Mutua autenticazione (Kerberos v4)
+\end_layout
+
+\begin_layout Standard
+Introduciamo i seguenti cambiamenti all'algoritmo mostrato nella precedente
+ sezione:
+\end_layout
+
+\begin_layout Itemize
+utilizziamo i timestamp anche in fase di autenticazione;
+\end_layout
+
+\begin_layout Itemize
+inviamo i ticket assieme a un timestamp e cifriamo il tutto;
+\end_layout
+
+\begin_layout Itemize
+usiamo delle stringhe contenenti la cifratura di di ID del client e del
+ server di autenticazione assieme a un timestamp, e chiamiamole 
+\emph on
+authenticator
+\emph default
+.
+\end_layout
+
+\begin_layout Standard
+Implementiamo il protocollo con i nuovi elementi introdotti:
+\end_layout
+
+\begin_layout Enumerate
+
+\series bold
+C
+\series default
+ invia ad 
+\series bold
+A
+\series default
+ il messaggio 
+\begin_inset Formula $\text{ID}_{C}\|\text{ID}_{T}\|t_{s1}$
+\end_inset
+
+;
+\end_layout
+
+\begin_layout Enumerate
+
+\series bold
+A
+\series default
+ risponde a 
+\series bold
+C
+\series default
+ con 
+\begin_inset Formula $E_{K_{C,A}}\left(K_{C,T}\|\text{ID}_{T}\|t_{s2}\|\ell_{2}\|\bar{t}_{G}\right)$
+\end_inset
+
+;
+\end_layout
+
+\begin_layout Enumerate
+
+\series bold
+C
+\series default
+ invia a 
+\series bold
+T
+\series default
+ il messaggio 
+\begin_inset Formula $\text{ID}_{S}\|\bar{t}_{G}\|\mathbb{A}_{C1}$
+\end_inset
+
+;
+\end_layout
+
+\begin_layout Enumerate
+
+\series bold
+T
+\series default
+ risponde con 
+\begin_inset Formula $E_{K_{C,T}}\left(K_{C,S}\|\text{ID}_{S}\|t_{s4}\|\bar{t}_{S}\right)$
+\end_inset
+
+;
+\end_layout
+
+\begin_layout Enumerate
+
+\series bold
+C
+\series default
+ invia ad 
+\series bold
+S
+\series default
+ il messaggio 
+\begin_inset Formula $\bar{t}_{S}\|\mathbb{A}_{C2}$
+\end_inset
+
+;
+\end_layout
+
+\begin_layout Enumerate
+
+\series bold
+S
+\series default
+ risponde con 
+\begin_inset Formula $E_{K_{C,S}}\left(t_{s5}+1\right)$
+\end_inset
+
+.
+\end_layout
+
+\begin_layout Standard
+I due authenticator sono costruiti come:
+\end_layout
+
+\begin_layout Itemize
+\begin_inset Formula $\mathbb{A}_{C1}=E_{K_{C,T}}\left(\text{ID}_{C}\|\text{ID}_{A}\|t_{s3}\right)$
+\end_inset
+
+;
+\end_layout
+
+\begin_layout Itemize
+\begin_inset Formula $\mathbb{A}_{C2}=E_{K_{C,S}}\left(\text{ID}_{C}\|\text{ID}_{A}\|t_{s5}\right)$
+\end_inset
+
+.
+\end_layout
+
+\begin_layout Subsection
+Reami
+\end_layout
+
+\begin_layout Standard
+Un reame Kerberos consiste in un server di autenticazione, un TGS, uno o
+ più server che espongono servizi e infine un gruppo di utenti che li richiedono
+; possiamo configurare la rete per contenere più di un reame e per effettuare
+ l'autenticazione inter-reame, permettendo a utenti di un reame di usare
+ servizi situati in un'altro reame.
+\end_layout
+
+\begin_layout Subsection
+Miglioramenti e limitazioni di Kerberos v5
+\end_layout
+
+\begin_layout Standard
+Al contrario della versione 4 che usa la cifratura simmetrica DES, la versione
+ successiva permette di adottare qualunque sistema di cifratura; inoltre
+ Kerberos v5 non dipende dal protocollo IP, usa uno stile fisso per l'ordinament
+o dei Byte nel messaggio, specifica esplicitamente inizio e fine validità
+ per i token e infine permette l'inoltro dell'autenticazione (un server
+ a cui è autenticato un client può autenticarsi a sua volta a un'altro server).
+\end_layout
+
+\begin_layout Chapter
+Certificati e protocolli di rete
+\end_layout
+
+\begin_layout Section
+Infrastruttura a chiave pubblica (PKI)
+\end_layout
+
+\begin_layout Subsection
+PKI e certificati
+\end_layout
+
+\begin_layout Standard
+Nella cifratura a chiave pubblica, la chiave usata per cifrare è pubblica
+ e disponibile a tutti; la chiave per decifrare è privata (non viene condivisa)
+ e anche se ricavabile dalla pubblica, il costo computazionale rende il
+ problema irrisolvibile in pratica.
+ Il punto debole di questo meccanismo è la fiducia nella chiave pubblica:
+ proprio perché si tratta di una informazione pubblica, è necessario che
+ sia autenticata.
+\end_layout
+
+\begin_layout Standard
+Questo problema viene risolto dall'infrastruttura a chiave pubblica (public
+ key inrastructure, PKI), un insieme di procedure e regole per generare,
+ pubblicare e certificare le chiavi pubbliche; essa si bassa su 
+\emph on
+certificati
+\emph default
+ (documenti elettronici) che legano la chiave pubblica all'entità che l'ha
+ generata; un certificato garantisce quindi l'autenticità di una chiave.
+\end_layout
+
+\begin_layout Standard
+Il processo che determina la validità di un certificato si chiama 
+\emph on
+validazione
+\emph default
+; questo implica che sarà necessario fidarsi di un'autorità di certificazione
+ (certification authority, CA) che emette certificati firmati da lei stessa.
+\end_layout
+
+\begin_layout Standard
+Possiamo classificare i certificati nel modo seguente:
+\end_layout
+
+\begin_layout Itemize
+i 
+\emph on
+certificati d'identità
+\emph default
+ forniscono e garantiscono le informazioni sull'identità di un'entità (indirizzo
+, chiave pubblica, ecc
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+
+\backslash
+ldots
+\end_layout
+
+\end_inset
+
+);
+\end_layout
+
+\begin_layout Itemize
+i 
+\emph on
+certificati credenziali
+\emph default
+ forniscono e garantiscono le informazioni sui diritti di accesso e di autorizza
+zione per un servizio o risorsa.
+\end_layout
+
+\begin_layout Subsection
+Fidarsi di un certificato
+\end_layout
+
+\begin_layout Standard
+Tra le informazioni contenute in un certificato, quelle principali sono
+ il nome del soggetto del certificato, la sua chiave pubblica e una firma
+ (digest) delle due informazioni appena enunciate, firmata con la chiave
+ privata della CA (tutti hanno la sua chiave pubblica e possono verificare
+ che sia stata la CA a firmare):
+\begin_inset Formula 
+\[
+{\scriptstyle \text{CERT}}\left(A\right)\coloneqq E_{CA}\left(A,\,K_{A},\,E_{K_{CA}^{-1}}\left(h\left(A,\,K_{A}\right)\right)\right)
+\]
+
+\end_inset
+
+La chiave pubblica delle CA di livello più alto viene inserita nel browser
+ o nel sistema operativo, dunque bisognerà riporre fiducia in questi software
+ per fidarsi delle chiavi con le quali sono distribuiti; in ogni caso, fidarsi
+ della CA implica soltanto il riporre fiducia nelle informazioni che essa
+ ha firmato, non vuol dire fidarsi della CA in quanto praticamente affidabile.
+\end_layout
+
+\begin_layout Standard
+Dal momento che le CA di alto livello sono poche e le entità che vogliono
+ essere certificate sono numerose, spesso le CA firmano certificati per
+ delle autorità di registrazione (registration authority, RA), le quali
+ a loro volta possono firmare i certificati di RA di livello più basso;
+ si viene così a formare una struttura ad albero, che racchiude catene di
+ fiducia (catene di certificati), e permette di fidarsi del certificato
+ foglia se si ripone fiducia nel certificato radice.
+\end_layout
+
+\begin_layout Subsection
+Certificati X.509
+\end_layout
+
+\begin_layout Standard
+Si tratta di uno standard raccomandato dall'Unione Internazionale per le
+ Telecomunicazioni (ITU); al contrario degli standard, non si incorre in
+ sanzioni se non si seguono (è illegale vendere un prodotto non conforme
+ agli standard approvati dall'ente nazionale di competenza).
+\end_layout
+
+\begin_layout Standard
+La serie di raccomandazioni dell'ITU X.500 specifica il servizio di rubrica
+ per gli utenti, e X.509 definisce i metodi di autenticazione per tali utenti,
+ tramite certificati.
+\end_layout
+
+\begin_layout Standard
+I certificati X.509 hanno una struttura costituita dai seguenti campi:
+\end_layout
+
+\begin_layout Itemize
+versione
+\end_layout
+
+\begin_layout Itemize
+numero di serie (ogni certificato ha uno univoco, rispetto alla sue CA emittente
+);
+\end_layout
+
+\begin_layout Itemize
+nome della CA;
+\end_layout
+
+\begin_layout Itemize
+periodo di validità;
+\end_layout
+
+\begin_layout Itemize
+nome del soggetto (entità di cui si certifica la chiave pubblica);
+\end_layout
+
+\begin_layout Itemize
+chiave pubblica del soggetto;
+\end_layout
+
+\begin_layout Itemize
+firma (specifica l'algoritmo di firma).
+\end_layout
+
+\begin_layout Standard
+Tramite il numero di serie è possibile revocare un certificato che non sia
+ ancora scaduto, ponendolo in una lista di revoca; questo pone il problema
+ di dover controllare le revoche effettuate, attraverso la lista di revoca
+ che viene salvata periodicamente in una 
+\emph on
+cache
+\emph default
+.
+\end_layout
+
+\begin_layout Example
+
+\emph on
+Sia dato il certificato dell'utente 
+\begin_inset Formula $A$
+\end_inset
+
+, costruito secondo le raccomandazioni X.509:
+\emph default
+
+\begin_inset Formula 
+\[
+{\scriptstyle \text{CERT}}\left(A\right)=\left(A,\,K_{A},\,h_{K_{CA}^{-1}}\left(A,\,K_{A}\right)\right)
+\]
+
+\end_inset
+
+
+\emph on
+Sappiamo che cifratura e firma usano l'algoritmo RSA con parametri 
+\begin_inset Formula $n=221$
+\end_inset
+
+, 
+\begin_inset Formula $K_{CA}=35$
+\end_inset
+
+, 
+\begin_inset Formula $K_{A}=25$
+\end_inset
+
+, 
+\begin_inset Formula $A=200$
+\end_inset
+
+; inoltre la funzione di hash 
+\begin_inset Formula $h\left(\circ\right)$
+\end_inset
+
+ è definita come:
+\emph default
+
+\begin_inset Formula 
+\[
+\forall x,\,y\in\mathbb{Z}_{n}\,:\,h\left(x,\,y\right)=\mod{\left(x\oplus\left(y\ll3\right)\oplus\left(y\ll4\right)\right)}n
+\]
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Example
+
+\emph on
+Verificare la correttezza dei dati nel contesto dell'algoritmo RSA.
+\end_layout
+
+\begin_layout Standard
+\begin_inset Formula $\checked$
+\end_inset
+
+Controlliamo che 
+\begin_inset Formula $n$
+\end_inset
+
+ sia valido, controllando che sia costituito da due fattori primi 
+\begin_inset Formula $p$
+\end_inset
+
+ e 
+\begin_inset Formula $q$
+\end_inset
+
+:
+\begin_inset Formula 
+\[
+n=221=13\cdot17
+\]
+
+\end_inset
+
+Calcoliamo ora il suo toziente e il toziente del toziente:
+\begin_inset Formula 
+\[
+\varphi\left(221\right)=12\cdot16=2^{6}\cdot3=192;\qquad\varphi\left(\varphi\left(221\right)\right)=\varphi\left(192\right)=\left(2^{6}-2^{5}\right)\cdot\left(3-1\right)=64
+\]
+
+\end_inset
+
+Verifichiamo che le chiavi pubbliche 
+\begin_inset Formula $K_{CA},\,K_{A}$
+\end_inset
+
+ siano invertibili in modulo 
+\begin_inset Formula $\varphi\left(n\right)$
+\end_inset
+
+:
+\begin_inset Formula 
+\[
+\begin{array}{c}
+\overset{35}{\overbrace{7\cdot5}}\perp\overset{192}{\overbrace{2^{6}\cdot3}}\implies\cgm{35^{-1}}{11}{192}\\
+\overset{25}{\overbrace{5^{2}}}\perp\overset{192}{\overbrace{2^{6}\cdot3}}\implies\cgm{25^{-1}}{169}{192}
+\end{array}
+\]
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+
+\emph on
+Calcolare la firma digitale associata al certificato.
+\end_layout
+
+\begin_layout Standard
+\begin_inset Formula $\checked$
+\end_inset
+
+Per prima cosa dobbiamo calcolare il digest della funzione 
+\begin_inset Formula $h\left(A,\,K_{A}\right)$
+\end_inset
+
+ esprimendo nome utente e chiave pubblica associata su 8
+\begin_inset space ~
+\end_inset
+
+bit, applicando la funzione di hash proposta dal quesito:
+\begin_inset Formula 
+\[
+\begin{array}{ll}
+11001000_{2}=200_{10} & \left(A\right)\\
+00011001_{2}=25_{10} & \left(K_{A}\right)\\
+11001000 & K_{A}\ll3\\
+10010001 & K_{A}\ll4
+\end{array}
+\]
+
+\end_inset
+
+Calcoliamo ora il digest applicando la somma bit a bit:
+\begin_inset Formula 
+\[
+\begin{array}{rl}
+\cancel{11001000} & \oplus\\
+\cancel{11001000} & \oplus\\
+\underline{10010001} & =\\
+10010001 & \left(145\right)
+\end{array}
+\]
+
+\end_inset
+
+Infine possiamo ottenere la firma di 
+\begin_inset Formula $h\left(200,\,25\right)=145$
+\end_inset
+
+ usando la chiave 
+\begin_inset Formula $\cgm{K_{CA}^{-1}\equiv25^{-1}}{11}{192}$
+\end_inset
+
+:
+\begin_inset Formula 
+\[
+\cgm{145^{11}}{202}{221}
+\]
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+Concludiamo che i valori che costituiscono il certificato sono 
+\begin_inset Formula $C_{A}=\left(200,\,25,\,202\right)$
+\end_inset
+
+; possiamo verificare la chiave pubblica tramite la firma contenuta nel
+ certificato:
+\begin_inset Formula 
+\[
+\cgm{\left[h_{K_{CA}^{-1}}\left(A,\,K_{A}\right)\right]^{K_{CA}}}{h\left(A,\,K_{A}\right)}n\rightarrow\cgm{202^{35}}{145}{221}
+\]
+
+\end_inset
+
+Abbiamo ottenuto nuovamente il digest, verificando la congruenza e la validità
+ della firma (solo la CA poteva calcolare la firma poiché solo essa conosce
+ l'inverso di 
+\begin_inset Formula $\mod{K_{CA}}n$
+\end_inset
+
+).
+ 
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+
+\backslash
+demo
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Section
+Protocolli di rete sicuri
+\end_layout
+
+\begin_layout Standard
+I protocolli di rete sono organizzati a strati, per questo motivo abbiamo
+ le seguenti alternative nel localizzare i protocolli di sicurezza sullo
+ 
+\emph on
+stack di rete
+\emph default
+:
+\end_layout
+
+\begin_layout Itemize
+livello di rete (IPSec);
+\end_layout
+
+\begin_deeper
+\begin_layout Itemize
+trasparente alle applicazioni e agli utenti;
+\end_layout
+
+\begin_layout Itemize
+soluzione generale che garantisce la cifratura di tutto il traffico;
+\end_layout
+
+\begin_layout Itemize
+cifra solamente il traffico selezionato, evitando overhead non necessario.
+\end_layout
+
+\end_deeper
+\begin_layout Itemize
+livello di trasporto (TLS);
+\end_layout
+
+\begin_deeper
+\begin_layout Itemize
+usa connessioni TCP per inviare i dati cifrati;
+\end_layout
+
+\begin_layout Itemize
+deve essere integrato nelle applicazioni specifiche che usano TCP.
+\end_layout
+
+\end_deeper
+\begin_layout Itemize
+livello applicativo.
+\end_layout
+
+\begin_layout Subsection
+Transport Level Security (TLS)
+\end_layout
+
+\begin_layout Standard
+Usa TCP per trasportare i dati cifrati, sfruttando le garanzie di integrità
+ che esso offre; esso è implementato come un insieme di protocolli basati
+ su TCP, di cui il principale è chiamato 
+\emph on
+Record Protocol
+\emph default
+ (fornisce servizi di trasporto sicuro ai livelli superiori).
+ È documentato nell'RFC 5246.
+\end_layout
+
+\begin_layout Standard
+Gli altri servizi che si basano sul Record Protocol e costituiscono TLS
+ sono:
+\end_layout
+
+\begin_layout Itemize
+Handshake Protocol (negozia le chiavi di sessione);
+\end_layout
+
+\begin_layout Itemize
+Change Cipher Spec Protocol (cambia o seleziona algoritmo di cifratura per
+ una connessione);
+\end_layout
+
+\begin_layout Itemize
+Alert Protocol (distribuisce avvisi sulla connessione TLS agli altri peer);
+\end_layout
+
+\begin_layout Itemize
+Heartbit Protocol (mantiene attiva la connessione, ritardando il timeout).
+\end_layout
+
+\begin_layout Standard
+Il TLS implementa, oltre al concetto di connessione (già presente in TCP)
+ anche il concetto di 
+\emph on
+sessione
+\emph default
+: con l'Handshake Protocol si inizia una sessione, la quale può avere più
+ connessioni al proprio interno; inoltre la sessione mantiene un set di
+ chiavi che possono essere usate dalle connessioni instaurate nel suo contesto.
+ Queste chiavi saranno rinnovate all'apertura di una nuova sessione; il
+ concetto di sessione evita la negoziazione costosa dei parametri di sicurezza
+ ad ogni nuova connessione.
+\end_layout
+
+\begin_layout Standard
+Lo stato della sessione è costituito da:
+\end_layout
+
+\begin_layout Itemize
+identificatore della sessione;
+\end_layout
+
+\begin_layout Itemize
+certificato X.509 del peer (opzionale);
+\end_layout
+
+\begin_layout Itemize
+algoritmo di compressione (usato sui dati prima della cifratura);
+\end_layout
+
+\begin_layout Itemize
+specifica del cifrario (algoritmo per la cifratura);
+\end_layout
+
+\begin_layout Itemize
+master secret (segreto da 48
+\begin_inset space ~
+\end_inset
+
+Byte condiviso tra client e server);
+\end_layout
+
+\begin_layout Standard
+Le singole connessioni possiedono uno stato definito dai seguenti parametri:
+\end_layout
+
+\begin_layout Itemize
+numero casuale per server/client (generato per ogni connessione);
+\end_layout
+
+\begin_layout Itemize
+segreto MAC per il server (usato per autenticare i messaggi del server);
+\end_layout
+
+\begin_layout Itemize
+segreto MAC per il client (usato per autenticare i messaggi del client);
+\end_layout
+
+\begin_layout Itemize
+chiave simmetrica del server (chiave simmetrica per cifrare sul server e
+ decifrare sul client);
+\end_layout
+
+\begin_layout Itemize
+chiave simmetrica del client (chiave simmetrica per cifrare sul client e
+ decifrare sul server);
+\end_layout
+
+\begin_layout Itemize
+vettori di inizializzazione;
+\end_layout
+
+\begin_layout Itemize
+numeri di sequenza.
+\end_layout
+
+\begin_layout Standard
+I servizi che il TLS Record Protocol sono i seguenti:
+\end_layout
+
+\begin_layout Labeling
+\labelwidthstring 00.00.0000
+
+\series bold
+Confidenzialità
+\series default
+ lo Handshake Protocol definisce una chiave segreta condivisa usata per
+ la crittografia del 
+\emph on
+payload
+\emph default
+ TLS;
+\end_layout
+
+\begin_layout Labeling
+\labelwidthstring 00.00.0000
+
+\series bold
+Integrità
+\series default
+ lo Handshake Protocol inoltre definisce una chiave segreta usata come codice
+ per autenticare i messaggi (MAC).
+\end_layout
+
+\begin_layout Standard
+In ordine le operazioni che il Record Protocol effettua sono:
+\end_layout
+
+\begin_layout Enumerate
+segmentazione dei dati applicativi da inviare sul canale sicuro (c'è una
+ finestra massima per i pacchetti TLS);
+\end_layout
+
+\begin_layout Enumerate
+i segmenti vengono compressi con l'algoritmo di compressione negoziato tramite
+ Handshake Protocol;
+\end_layout
+
+\begin_layout Enumerate
+al segmento compresso viene concatenato un HMAC calcolato a partire dal
+ messaggio da inviare, usando il segreto pattuito con Handshake Protocol;
+\end_layout
+
+\begin_layout Enumerate
+il frammento compresso con HMAC viene cifrato con l'algoritmo pattuito tramite
+ Handshake Protocol;
+\end_layout
+
+\begin_layout Enumerate
+al segmento cifrato viene anteposto un 
+\emph on
+header
+\emph default
+ TLS per Record Protocol: esso sarà a sua volta il payload di un pacchetto
+ TCP.
+\end_layout
+
+\begin_layout Standard
+L'header TLS contiene il campo 
+\family typewriter
+Content type
+\family default
+ (tipo di contenuto), che può indicare HTTPS o uno dei quattro protocolli
+ su cui si basa Record Protocol.
+\end_layout
+
+\begin_layout Subsection
+Handshake TLS
+\end_layout
+
+\begin_layout Standard
+L'instaurazione di una sessione TLS è preceduta dal seguente procedimento,
+ chiamato 
+\emph on
+handshake
+\emph default
+:
+\end_layout
+
+\begin_layout Enumerate
+client e server stabiliscono i protocolli per l'instaurazione della chiave,
+ per la cifratura e per l'autenticazione dei messaggi;
+\end_layout
+
+\begin_layout Enumerate
+il server si autentica (eventualmente inviando il proprio certificato) e
+ invia le chiavi per la cifratura al client;
+\end_layout
+
+\begin_layout Enumerate
+il client si autentica (eventualmente inviando il proprio certificato) e
+ invia le chiavi per la cifratura al server;
+\end_layout
+
+\begin_layout Enumerate
+client e server scelgono l'algoritmo di cifratura con cui usare le chiavi
+ instaurate, e l'inizializzazione viene finalizzata.
+\end_layout
+
+\begin_layout Standard
+In generale, considerati un client 
+\series bold
+C
+\series default
+ e un server 
+\series bold
+S
+\series default
+, le chiavi crittografiche vengono generate con la seguente procedura:
+\end_layout
+
+\begin_layout Itemize
+
+\series bold
+C
+\series default
+ invia ad 
+\series bold
+S
+\series default
+ in chiaro un numero casuale 
+\begin_inset Formula $r_{C}$
+\end_inset
+
+ di 32
+\begin_inset space ~
+\end_inset
+
+Byte, di cui i primi 4 siano un timestamp;
+\end_layout
+
+\begin_layout Itemize
+
+\series bold
+S
+\series default
+ invia a 
+\series bold
+C
+\series default
+ in chiaro un numero casuale 
+\begin_inset Formula $r_{S}$
+\end_inset
+
+ di 32
+\begin_inset space ~
+\end_inset
+
+Byte, di cui i primi 4 siano un timestamp;
+\end_layout
+
+\begin_layout Itemize
+
+\series bold
+C
+\series default
+ invia ad 
+\series bold
+S
+\series default
+ un numero casuale 
+\begin_inset Formula $S_{{\scriptscriptstyle \text{PM}}}$
+\end_inset
+
+ di 48
+\begin_inset space ~
+\end_inset
+
+Byte cifrato con RSA e chiamato 
+\emph on
+pre-master secret
+\emph default
+;
+\end_layout
+
+\begin_layout Itemize
+
+\series bold
+C
+\series default
+ e 
+\series bold
+S
+\series default
+ calcolano il numero 
+\begin_inset Formula $S_{{\scriptscriptstyle \text{M}}}$
+\end_inset
+
+ che dipende dai tre numeri scambiati e si ottiene concatenando i 3 blocchi
+ seguenti:
+\begin_inset Formula 
+\[
+S_{{\scriptscriptstyle \text{M}}}=\begin{cases}
+{\scriptstyle \text{MD5}}\left(S_{{\scriptscriptstyle \text{PM}}}\|{\scriptstyle \text{SHA1}}\left(A\|S_{{\scriptscriptstyle \text{PM}}}\|r_{C}\|r_{S}\right)\right)\\
+{\scriptstyle \text{MD5}}\left(S_{{\scriptscriptstyle \text{PM}}}\|{\scriptstyle \text{SHA1}}\left(BB\|S_{{\scriptscriptstyle \text{PM}}}\|r_{C}\|r_{S}\right)\right)\\
+{\scriptstyle \text{MD5}}\left(S_{{\scriptscriptstyle \text{PM}}}\|{\scriptstyle \text{SHA1}}\left(CCC\|S_{{\scriptscriptstyle \text{PM}}}\|r_{C}\|r_{S}\right)\right)
+\end{cases}
+\]
+
+\end_inset
+
+dove ciascuno dei blocchi è costituito da 128
+\begin_inset space ~
+\end_inset
+
+bit (16
+\begin_inset space ~
+\end_inset
+
+Byte);
+\end_layout
+
+\begin_layout Itemize
+
+\series bold
+C
+\series default
+ e 
+\series bold
+S
+\series default
+ calcolano il proprio blocco di chiavi di sessione a partire dal segreto
+ 
+\begin_inset Formula $S_{{\scriptscriptstyle \text{M}}}$
+\end_inset
+
+ (6 chiavi segrete, la metà per cifrare da client a server e vice-versa);
+\end_layout
+
+\begin_deeper
+\begin_layout Itemize
+chiave di cifratura;
+\end_layout
+
+\begin_layout Itemize
+chiave per MAC;
+\end_layout
+
+\begin_layout Itemize
+vettore di inizializzazione se il cifrario è usato in modo concatenato (CBC).
+\end_layout
+
+\end_deeper
+\begin_layout Subsection
+HTTPS
+\end_layout
+
+\begin_layout Standard
+Si tratta di un protocollo applicativo che combina HTTP con TLS per garantire
+ una comunicazione sicura tra client e server; è documentato nell'RFC 2818.
+ Quando viene richiesta una risorsa tramite HTTPS, vengono cifrati i seguenti
+ elementi:
+\end_layout
+
+\begin_layout Itemize
+l'URL del documento richiesto;
+\end_layout
+
+\begin_layout Itemize
+il contenuto del documento;
+\end_layout
+
+\begin_layout Itemize
+i contenuti dei moduli del browser;
+\end_layout
+
+\begin_layout Itemize
+i 
+\emph on
+cookie
+\emph default
+ inviati dal client al server e vice-versa;
+\end_layout
+
+\begin_layout Itemize
+l'header HTTP.
+\end_layout
+
+\begin_layout Standard
+L'agente che ha il ruolo di client HTTP agisce anche come client TLS, prima
+ avviando un handshake TLS e poi effettuando la richiesta HTTP tramite il
+ canale sicuro; una connessione HTTP ha tre 
+\begin_inset Quotes eld
+\end_inset
+
+strati
+\begin_inset Quotes erd
+\end_inset
+
+:
+\end_layout
+
+\begin_layout Itemize
+HTTP
+\end_layout
+
+\begin_deeper
+\begin_layout Itemize
+un client richiede una connessione HTTP a un server, e tale richiesta è
+ inviata allo strato inferiore;
+\end_layout
+
+\end_deeper
+\begin_layout Itemize
+TLS
+\end_layout
+
+\begin_deeper
+\begin_layout Itemize
+una sessione TLS è stabilita tra client e server;
+\end_layout
+
+\begin_layout Itemize
+la richiesta per stabilire la connessione comincia con una connessione allo
+ strato inferiore;
+\end_layout
+
+\end_deeper
+\begin_layout Itemize
+TCP
+\end_layout
+
+\begin_deeper
+\begin_layout Itemize
+una connessione è stabilita tra le entità TCP di client e server.
+\end_layout
+
+\end_deeper
+\begin_layout Standard
+Infine, possiamo chiudere una connessione HTTPS partendo dallo 
+\begin_inset Quotes eld
+\end_inset
+
+strato
+\begin_inset Quotes erd
+\end_inset
+
+ superiore e terminando ciascuna connessione in cascata verso gli strati
+ inferiori; a livello di HTTP, la connessione si chiude tramite l'header
+ 
+\family typewriter
+Connection: close
+\family default
+, mentre a livello di TLS si usa l'Alert Protocol per inviare l'avviso di
+ chiusura.
+\end_layout
+
+\begin_layout Standard
+Se la connessione HTTPS si interrompe in modo inaspettato sullo strato TCP,
+ questo può indicare un errore di implementazione o un possibile attacco:
+ in ogni caso è opportuno mostrare un errore.
 \end_layout
 
 \begin_layout Chapter
